# MIT_Applied_Data_Science

./: .gitignore  ReadMe.md  Reference_Notebook_Facial_Emotion_Detection_Full_Code.ipynb  Reference_Notebook_Facial_Emotion_Detection_Full_Code_pytorch.ipynb  final_submission.ipynb
azure_ml/: README.md  SDK_v2_Modern_Guide.md  conda.yml  local_runner.py  main.py  pipeline.yml  pyproject.toml  requirements.txt  setup_local.sh
azure_ml/config/: local_config.json  training_config.json
azure_ml/src/: components.py  config.py  deployment.py  evaluation.py  model.py  pipeline_runner.py  preprocessing.py  training.py
